Made code container slightly smaller then article to stop border clipping out

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,7 +111,7 @@ section {
     border: 1px solid black;
     display: flex;
     justify-content: space-between;
-    width: 100%;
+    width: 99%;
     height: 100%;
 }
 
